Quick styling patch for Input component - Corrects input alignment for keywords input

--- a/client/src/components/input.css
+++ b/client/src/components/input.css
@@ -20,6 +20,10 @@
   justify-content: flex-start;
 }
 
+.input-field .input-box.justify-center {
+  justify-content: center;
+}
+
 .input-field .input-box .symbol {
   width: 10%;
 }
